--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<style type="text/css">
 		@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 		.content {
+			font-size: 30px;
 			font-family: Indie Flower;
 			position: absolute;
 			left: 50%;
